Pre-work to get repository working on Windows and on Java 25
- Excluded failing tests from not finished solutions from 2024, so test run is a clean pass
- Updated Gradle to 9.2.1 and Java to 25 (this required explicitly specifying JUnit platform launcher)
- Updates to work on Windows (or at least, changes to IDEA config that getting ths project working on Windows required)
- Removed enabling preview features (this might break some solutions from 2024)